<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hiwonder_imu</name>
  <version>0.0.0</version>
  <description>Hiwonder IMU driver package for ROS 2</description>
  <maintainer email="biobear0504@gmail.com">qwer123</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>serial_driver</depend>
  <depend>io_context</depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>